# cli_tools

./: Cargo.toml  README.md  foo2.txt  foo3.txt  foo4.txt
src/: args.rs  main.rs
test/: dir_foo.txt  dir_foo2.txt  dir_foo3.txt  foo4.txt
